[package]
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
name = "git-rup"
version = "0.1.0"
description = ""
repository = "https://github.com/ordovicia/git-rup"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml"]

[dependencies]
getopts = "0.2.14"

[dependencies.git2]
git = "https://github.com/alexcrichton/git2-rs"
